set layout properly

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,8 +1,1 @@
-body {
-  background-image: url('/photos/main-background.jpeg');
-  background-size: cover;
-  background-position: center;
-  width: 100vw;
-  height: 100vh;
-  overflow: hidden;
-}
+@import url("../styles/auth/index.css");
