--- a/src/styles/auth/index.css
+++ b/src/styles/auth/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap');
+
 body {
   background-image: url("../../../public/photos/main-background.jpeg");
   background-size: cover;
@@ -5,6 +7,7 @@ body {
   width: 100vw;
   height: 100vh;
   overflow: hidden;
+  font-family: 'Ubuntu', sans-serif !important;
 }
 
 .footer {
