--- a/src/styles/auth/index.css
+++ b/src/styles/auth/index.css
@@ -5,6 +5,7 @@ body {
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
+  background-repeat: no-repeat;
   width: 100vw;
   height: 100vh;
   overflow: hidden;
@@ -23,23 +24,36 @@ body {
 .title {
   font-weight: bold;
   position: fixed;
-  left: 72%;
-  top: 12%;
-  transform: translate(-50%, -12%);
-}
-
-@media (max-width: 768px) {
-  .title {
-    position: static;
-  }
+  left: 71%;
+  top: 13%;
+  transform: translate(-47%, -13%);
 }
 
 .title-one {
   font-size: 2.5rem;
+  text-decoration: underline;
 }
 
 .title-two {
   font-size: 1.5rem;
+}
+
+.full-title {
+  position: relative;
+  top: 17px;
+  right: 19px;
+}
+
+.logo-img {
+  transition: box-shadow 0.3s ease-in-out;
+  border: none;
+  outline: none;
+  cursor: pointer;
+}
+
+.logo-img:hover {
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+  transform: translateY(-2px);
 }
 
 @import url("./footer.css");
