--- a/src/styles/auth/index.css
+++ b/src/styles/auth/index.css
@@ -6,9 +6,10 @@ body {
   background-position: center;
   background-attachment: fixed;
   background-repeat: no-repeat;
+  background-color: black !important;
   width: 100vw;
   height: 100vh;
-  overflow: hidden;
+  overflow: scroll;
   font-family: "Ubuntu", sans-serif !important;
 }
 
