added 2nd section, modified style

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,3 @@
-@import url("../styles/auth/index.css");
+@import url("../styles/top/index.css");
 @import url("../styles/button/index.css");
 @import url("../styles/pages/index.css");
