--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -7,6 +7,11 @@
   min-height: 100vh;
 }
 
+.content {
+  height: 90vh !important;
+  overflow: scroll;
+}
+
 .description {
   display: inherit;
   justify-content: inherit;
