--- a/src/styles/top/index.css
+++ b/src/styles/top/index.css
@@ -22,6 +22,7 @@ body {
   background-position: center;
   background-attachment: fixed;
   display: flex;
+  overflow: hidden;
   flex-direction: column;
   min-height: 100vh;
   padding: 0px 100px 0px 100px;
