--- a/src/styles/top/index.css
+++ b/src/styles/top/index.css
@@ -69,6 +69,10 @@ body {
   padding: 15px;
 }
 
+.glow {
+  text-shadow: 0 0 6px #EAD7BB;
+}
+
 @import url("./footer.css");
 @import url("./description.css");
 @import url("./quotes.css");
