--- a/src/styles/top/index.css
+++ b/src/styles/top/index.css
@@ -13,7 +13,6 @@ body {
 }
 
 .content {
-  height: 90vh !important;
   overflow-y: scroll;
 }
 
@@ -22,10 +21,10 @@ body {
   background-position: center;
   background-attachment: fixed;
   display: flex;
-  overflow: hidden;
   flex-direction: column;
   min-height: 100vh;
   padding: 0px 100px 0px 100px;
+  overflow: auto;
 }
 
 .title {
