--- a/src/styles/pages/index.css
+++ b/src/styles/pages/index.css
@@ -18,4 +18,41 @@
   color: #F5E8B7;
 }
 
+.scale-1:hover {
+  transform: scale(1.01)
+}
+
+.scale-1 {
+  transition: transform 0.3s ease-in-out;
+}
+
+.scale-2:hover {
+  transform: scale(1.1)
+}
+
+.scale-2 {
+  transition: transform 0.3s ease-in-out;
+}
+
+.scale-3:hover {
+  transform: scale(1.5)
+}
+.scale-3 {
+  transition: transform 0.3s ease-in-out;
+}
+
+.scale-4:hover {
+  transform: scale(1.7)
+}
+.scale-4 {
+  transition: transform 0.3s ease-in-out;
+}
+
+.scale-5:hover {
+  transform: scale(2);
+}
+.scale-5 {
+  transition: transform 0.3s ease-in-out;
+}
+
 @import url("./layout/index.css");
